--- a/index.html
+++ b/index.html
@@ -49,90 +49,90 @@ butterfly
  */
 
 const createPhase = <T extends object>(
-    createActions: (innerSetKey: (newKey: Exclude<keyof T, 'actions'>) => void
-) => void): T => {
-    let key
-    const setKey = (newKey) => { key = newKey }
-    const map = createActions(setKey)
-    if (key && !map[key]) throw new Error('The passed key does not match any predefined phase')
+   createActions: (innerSetKey: (newKey) => void
+) => void): T  => {
+   let key
+   const setKey = (newKey) => { key = newKey }
+   const map = createActions(setKey)
+   if (key && !map[key]) throw new Error('The passed key does not match any predefined phase')
 
-    const keys = Object.keys(map as any)
+   const keys = Object.keys(map as any)
 
-    const toggles = keys.reduce((result, innerKey) => ({
-        ...result,
-        [innerKey]: innerKey === key || keys[0],
-    }), {})
+   const toggles = keys.reduce((result, innerKey) => ({
+       ...result,
+       [innerKey]: innerKey === key || keys[0],
+   }), {})
 
-    const phase = {
-        ...toggles,
-        actions: map[key || keys[0]],
-    } as T
+   const phase = {
+       ...toggles,
+       actions: map[key || keys[0]],
+   }
 
-    return phase
+   return phase as T
 }
 
 /**
- * Custom Schema
+ * Schema
  */
-
-type Phase = {
-    egg: true,
-    caterpillar: false,
-    butterfly: false,
-
-    actions: {
+type Phase = 
+   | {
+      egg: true;
+      caterpillar: false;
+      butterfly: false;
+      actions: {
         grow: Function;
-        hatch: Function; // caterpillar
-    };
-} | {
-    egg: false,
-    caterpillar: true,
-    butterfly: false,
-
-    actions: {
+        hatch: Function
+      }
+    }
+   | {
+      egg: false;
+      caterpillar: true;
+      butterfly: false;
+      actions: {
         eat: Function;
         crawl: Function;
-        cocoon: Function; // butterfly
-    };
-} | {
-    egg: false,
-    caterpillar: false,
-    butterfly: true,
-
-    actions: {
+        cocoon: Function
+      }
+    }
+   | {
+      egg: false;
+      caterpillar: false;
+      butterfly: true;
+      actions: {
         fly: Function;
-        mate: Function; // egg
-    };
-}
+        mate: Function
+      }
+    }
 
+   
 /**
- * Custom Actions
+ * Actions
  */
 
 const createActions = (setKey: (newKey: Exclude<keyof Phase, 'actions'>) => void) => ({
-    egg: {
-        grow: () => console.log('grow'),
-        hatch: () => setKey('caterpillar')
-    },
-    caterpillar: {
-        eat: () => console.log('eat'),
-        crawl: () => console.log('crawl'),
-        cocoon: () => setKey('butterfly'),
-    },
-    butterfly: {
-        fly: () => console.log('fly'),
-        mate: () => setKey('egg'),
-    }
+  egg: {
+    grow: () => console.log('grow'),
+    hatch: () => setKey('caterpillar')
+  },
+  caterpillar: {
+    eat: () => console.log('eat'),
+    crawl: () => console.log('crawl'),
+    cocoon: () => setKey('butterfly')
+  },
+  butterfly: {
+    fly: () => console.log('fly'),
+    mate: () => setKey('egg')
+  }
 })
 
-const phase = createPhase<Phase>(createActions)
+const phase = createPhase(createActions)
 
 const evolve = () => {
-    if (phase.egg) return phase.actions.hatch()
-    if (phase.caterpillar) return phase.actions.cocoon()
-    if (phase.butterfly) return phase.actions.mate()
+  if (phase.egg) return phase.actions.hatch()
+  if (phase.caterpillar) return phase.actions.cocoon()
+  if (phase.butterfly) return phase.actions.mate()
 
-    throw new Error('Unable to evolve')
+  throw new Error('Unable to evolve')
 }
 
 evolve();
