--- a/index.html
+++ b/index.html
@@ -104,6 +104,42 @@ type Phase =
       egg: true;
       caterpillar: false;
       butterfly: false;
+/*
+ * Internal Phasi Logic
+ */
+
+const createPhase = (
+   createActions: (innerSetKey: (newKey) => void
+) => void): T  => {
+   let key
+   const setKey = (newKey) => { key = newKey }
+   const map = createActions(setKey)
+   if (key && !map[key]) throw new Error('The passed key does not match any predefined phase')
+
+   const keys = Object.keys(map as any)
+
+   const toggles = keys.reduce((result, innerKey) => ({
+       ...result,
+       [innerKey]: innerKey === key || keys[0],
+   }), {})
+
+   const phase = {
+       ...toggles,
+       actions: map[key || keys[0]],
+   }
+
+   return phase as T
+}
+
+/*
+ * Schema
+ */
+
+type Phase = 
+   | {
+      egg: true;
+      caterpillar: false;
+      butterfly: false;
       actions: {
         grow: Function;
         hatch: Function
@@ -129,12 +165,11 @@ type Phase =
       }
     }
 
-   
-/**
+/*
  * Actions
  */
 
-const createActions = (setKey: (newKey: Exclude<keyof Phase, 'actions'>) => void) => ({
+const createActions = (setKey: (newKey: Exclude) => void) => ({
   egg: {
     grow: () => console.log('grow'),
     hatch: () => setKey('caterpillar')
